Migrate style, fix squashed hero image

--- a/.vuepress/styles/index.scss
+++ b/.vuepress/styles/index.scss
@@ -1,3 +1,7 @@
 .theme-container.custom-page-class .language-example {
   border: 4px solid #3eaf7c;
 }
+
+.home .hero img {
+  object-fit: scale-down;
+}
